# crozier

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  NOTICE  README.md  deny.toml  gh-secrets.json  justfile  llmlint.yml  pyproject.toml  release-plz.toml  rust-toolchain.toml  screencomp.toml
.claude/: settings.json
.githooks/: post-checkout  pre-push
.github/workflows/: ci.yml  fern-goldens.yml  release-plz.yml  release.yml  visual-docs.yml
.local/corpus/apache.org-airflow/: openapi.json
.local/corpus/apache.org-qakka/: openapi.json
.local/corpus/appwrite.io-client/: openapi.json
.local/corpus/appwrite.io-server/: openapi.json
.local/corpus/color.pizza/: openapi.json
assets/: README.md  crozier.schema.json
assets/core/: client_wrapper.py
assets/scaffolding/: README.md.tmpl  default_clients.py.tmpl  pyproject.toml  test_aiohttp_autodetect.py.tmpl
docs/: batch2-coverage-audit.md  configuration.md  fern-goldens.md  matching.md
examples/: audit_syntax.rs
pr-93/x86_64/: index.html
screenshots/: AGENTS.md  broken.yml  crozier.yml  petstore.yml
scripts/: check-batch2-coverage-audit.sh  corpus-lib.sh  demo-gif.py  fern-goldens  fetch-corpus.sh  fixture-new.sh  fixtures-refresh.sh  generate-corpus-fixtures.sh  generate-fern-fixture.sh  install-dev-tools.sh  install-ruff.sh  install.sh  lib.sh  lint-llm-diff.sh  live-e2e.sh  screenshots.sh  setup-fern.sh  setup-llmlint.sh  smoke.sh
shots/baseline/: x86_64.json
src/: cli.rs  config.rs  emit.rs  error.rs  ir.rs  lib.rs  main.rs  naming.rs  normalize.rs  openapi.rs  pyfmt.rs  schema.rs  settings.rs  wrap.rs
templates/: alias.py.j2  class_body.py.j2  client_class.py.j2  enum.py.j2  error.py.j2  file.py.j2  lazy_init.py.j2  object.py.j2  raw_client.py.j2  reference_entry.md.j2  root_client.py.j2  version.py.j2
tests/: audit_checker.rs  cli.rs  e2e.rs  fern_goldens_test.py  fern_goldens_workflow.rs  generation.rs  post_checkout_hook.rs
tests/fixtures/: AGENTS.md  CORPUS.md  README.md  corpus-aliases.tsv
tests/fixtures/6-dot-authentiqio.appspot.com/expected/: .crozier-fern-golden.json  README.md  reference.md
tests/fixtures/airbyte.local-config/expected/: .crozier-fern-golden.json  README.md  reference.md
tests/fixtures/amazonaws.com-cloudformation/expected/: .crozier-fern-golden.json  README.md  reference.md
tests/fixtures/anchore.io/expected/: .crozier-fern-golden.json  README.md  reference.md
tests/fixtures/apache.org-airflow/expected/: .crozier-fern-golden.json  reference.md
tests/fixtures/apache.org-qakka/expected/: .crozier-fern-golden.json  README.md  reference.md
tests/fixtures/apache.org/expected/: .crozier-fern-golden.json  README.md  reference.md
tests/fixtures/apicurio.local-registry/expected/: .crozier-fern-golden.json  README.md  reference.md
tests/fixtures/apideck.com-accounting/expected/: .crozier-fern-golden.json  README.md  reference.md
tests/fixtures/apideck.com-connector/expected/: README.md  (+2 more)
tests/fixtures/audience-filter/: openapi.yml
tests/fixtures/audience-filter-strict/: openapi.yml
tests/fixtures/auth-schemes/: openapi.yml
tests/fixtures/basic-auth/: openapi.yml
tests/fixtures/bracketed-property-names/: openapi.yml
tests/fixtures/calorieninjas.com/: known-fern-failure.json
tests/fixtures/client-class-name/: openapi.yml
tests/fixtures/cookie-parameters/: openapi.yml
tests/fixtures/digit-leading-property/: openapi.yml
tests/fixtures/discriminated-unions/: openapi.yml
tests/fixtures/enum-name-sanitization/: openapi.yml
tests/fixtures/enum-query-param/: openapi.yml
tests/fixtures/enum-receiver-collision/: openapi.yml
tests/fixtures/error-responses/: openapi.yml
tests/fixtures/form-bodies/: openapi.yml
tests/fixtures/inline-array-request/: openapi.yml
tests/fixtures/inline-request-response/: openapi.yml
tests/fixtures/integer-enums/: openapi.yml
tests/fixtures/malformed-property-schema/: openapi.yml
tests/fixtures/missing-operation-id/: openapi.yml
tests/fixtures/nested-core-imports/: openapi.yml
tests/fixtures/oauth-client-credentials/: openapi.yml
tests/fixtures/operation-id-non-identifier/: openapi.yml
tests/fixtures/recursive-types/: openapi.yml
tests/fixtures/schema-constraints/: openapi.yml
tests/fixtures/servers-webhooks/: openapi.yml
tests/fixtures/sse-streaming/: openapi.yml
tests/fixtures/tag-based-grouping/: openapi.yml
tests/fixtures/writeonly-fields/: openapi.yml
tests/live_e2e/: AGENTS.md  _driver.py  _relax.py  conftest.py  test_live_e2e.py
tests/runtime/: AGENTS.md  _recorder.py  test_wire.py  wire_test.py
(+10588 files in other folders)
