[package]
name = "crozier"
version = "0.0.0"
edition = "2021"
description = "Ultra-fast OpenAPI-to-SDK code generator that matches Fern's output, byte for byte."
license = "Apache-2.0"
repository = "https://github.com/nickderobertis/crozier"
readme = "README.md"
keywords = ["openapi", "codegen", "sdk", "python", "fern"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[[bin]]
name = "crozier"
path = "src/main.rs"

[lib]
name = "crozier"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
minijinja = { version = "2", features = ["loader"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
