[package]
name = "crozier"
version = "0.0.8"
edition = "2021"
description = "Ultra-fast OpenAPI-to-SDK code generator that matches Fern's output, byte for byte."
license = "Apache-2.0"
repository = "https://github.com/nickderobertis/crozier"
readme = "README.md"
keywords = ["openapi", "codegen", "sdk", "python", "fern"]
categories = ["command-line-utilities", "development-tools"]
# Package only what a crates.io consumer needs to build and run: the sources, the
# manifest, the readme/license/attribution, and the `templates/` embedded at
# compile time via `include_str!` (src/emit.rs). An explicit allowlist keeps the
# published crate small and — crucially — excludes the `CLAUDE.md -> AGENTS.md`
# symlink, which `cargo publish` rejects, along with CI config, scripts, and the
# Fern fixture corpus. `publish` is intentionally left at its default (true);
# the registry push runs from release.yml's `publish-crate` job, not release-plz.
include = [
    "src/**/*.rs",
    "templates/**/*.j2",
    # Fern's vendored `core/` runtime, emitted verbatim via include_str! in
    # src/emit.rs — must ship in the crate or `cargo publish`'s verify build
    # fails. `**/*` covers the nested http_sse/ subdir and the provenance README.
    "assets/**/*",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
    "/licenses/*",
]

[[bin]]
name = "crozier"
path = "src/main.rs"

[lib]
name = "crozier"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
minijinja = { version = "2", features = ["loader"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
